--- a/Shopkartfront/pom.xml
+++ b/Shopkartfront/pom.xml
@@ -8,12 +8,14 @@
   <name>Shopkartfront Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <!-- This is the dependency for junit testing   -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- This is the dependency for java ee   -->
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
